www/public/css/preferences.css
/*@media screen and (min-width: 800px) {
  body:before, body:after {
      content: "";
      position: fixed;
      background: #ac4142;
      left: 0;
      right: 0;
      height: 10px;
  }

  body:before {
      top: 0;
  }

  body:after {
      bottom: 0;
  }

  body {
      border-left: 10px solid #ac4142;
      border-right: 10px solid #ac4142;
  }
}*/

.post {
}

.storyImage {
  border: 1px solid #ac4142;
  height: 100%;
  position: relative;
}

.storyItem img {
  border: 1px solid rgba(172,65,66,.5);
}

.storyCaption {
  background-color: rgba(255,149,0,.1);
  border-left: 6px solid rgba(172,65,66,.5);
  font-family: "PT Serif", Georgia, "Times New Roman", serif;
  font-size: 17px;
  padding-left: 6px;
  text-align: left;
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

.storyItem {
  margin-bottom: 50px;
}

.headerLinks {
  border: 0px;
  float: right;
  margin: 0px;
  text-align: right;
}

.headerLinks a {
  opacity: 0.5;
}

.headerLinks a:hover {
  opacity: 1.0;
}

.emoji {
  border: 0px;
  float: left;
  height: 25px;
  width:  25px;
}

